--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,6 @@
 {
     "termsOfUse": "Nutzungsbedingungen",
     "dataProtection": "Datenschutz",
-    "imprint": "Impressum"
+    "imprint": "Impressum",
+    "TellUsSomethingAboutYourBike": "Erzähl uns etwas über dein Velo."
 }
