--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,6 @@
 {
     "termsOfUse": "Terms Of Use",
     "dataProtection": "Data Protection",
-    "imprint": "Imprint"
+    "imprint": "Imprint",
+    "TellUsSomethingAboutYourBike": "Tell us something about your bike."
 }
