Final commit.Form is ready

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,5 +2,44 @@
     "termsOfUse": "Nutzungsbedingungen",
     "dataProtection": "Datenschutz",
     "imprint": "Impressum",
-    "TellUsSomethingAboutYourBike": "Erzähl uns etwas über dein Velo."
+    "TellUsSomethingAboutYourBike": "Erzähl uns etwas über dein Velo.",
+    "Fields with a * are mandatory": "Felder mit einem * sind Pflichtfelder",
+    "Upload service data and receive offers": "Servicedaten hochladen und Angebote erhalten",
+    "Do you know your bike type?": "Kennst du deinen Velo-Typ?",
+    "What brand is your bike?":"Welche Marke ist dein Velo?",
+    "Would you like to book a standard service package?" : "Möchtest du ein Standard Service Paket buchen?",
+    "If you don't know what to do with" : "Falls du mit 'Service Paketen' nichts anfangen kannst, findest du weiter unten eine Auswahlliste mit verschiedenen Service-Leistungen.",
+    "Icon/ Illu" : "Icon/ Illu",
+    "Check-Up, about 50 CHF" : "Check-Up, ca. 50 CHF",
+    "Service small, approx. 120 CHF" : "Service klein, ca. 120 CHF",
+    "Large service, approx. 170 CHF" : "Service gross, ca. 170 CHF",
+    "Do not book a service package" : "Kein Service Paket buchen",
+    "Does your bike have an electric motor?" : "Hat dein Velo einen Elektro Antrieb?",
+    "Would you like to book individual services only?" : "Möchtest du nur einzelne Services buchen?",
+    "Multiple selections are possible." : "Eine Mehrfachauswahl ist möglich.",
+    "Multiple selections are possible" : "Eine Mehrfachauswahl ist möglich.",
+    "Tube and/or tire change" : "Schlauch- und/oder Reifenwechsel",
+    "Center Wheels" : "Räder zentrieren",
+    "Set circuit" : "Schaltung einstellen",
+    "Check and adjust brakes" : "Bremsen prüfen und einstellen",
+    "Change brake pads" : "Bremsbeläge wechseln",
+    "Fork Service" : "Federgabel Service",
+    "Damper Service" : "Dämpfer Service",
+    "Bike complete cleaning" : "Fahrrad-Komplettreinigung",
+    "Control light" : "Licht kontrollieren",
+    "E-Bike:" : "E-Velo:",
+    "Function check electronics/drive" : "Funktionskontrolle Elektronik/Antrieb",
+    "Check and charge battery" : "Batterie prüfen und laden",
+    "Would you like to describe the problem with your bike in more detail?" : "Möchtest du das Problem an deinem Velo noch näher beschreiben?",
+    "e.g. the chain broke, I have a figure eight in the front wheel." : "z.B. die Kette ist gerissen, ich habe einen Achter im Vorderrad.",
+    "Do you have a cost ceiling?" : "Hast du ein Kostendach?",
+    "Tell us something about yourself:" : "Sag uns noch kurz etwas über dich:",
+    "First name" : "Vorname",
+    "Last name" : "Nachname",
+    "Street" : "Strasse",
+    "No" : "Nr",
+    "POSTCODE" : "PLZ",
+    "Location" : "Ort",
+    "email" : "E-mail",
+    "phone" : "Telefon"
 }
