--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2,5 +2,43 @@
     "termsOfUse": "Terms Of Use",
     "dataProtection": "Data Protection",
     "imprint": "Imprint",
-    "TellUsSomethingAboutYourBike": "Tell us something about your bike."
+    "TellUsSomethingAboutYourBike": "Tell us something about your bike.",
+    "Fields with a * are mandatory": "Fields with a * are mandatory",
+    "Upload service data and receive offers": "Upload service data and receive offers",
+    "Do you know your bike type?": "Do you know your bike type?",
+    "What brand is your bike?": "What brand is your bike?",
+    "Would you like to book a standard service package?" : "Would you like to book a standard service package?",
+    "If you don't know what to do with" : "If you don't know what to do with 'Service Packages', you will find a selection list with various services below",
+    "Icon/ Illu" : "Icon/ Illu",
+    "Check-Up, about 50 CHF" : "Check-Up, about 50 CHF",
+    "Service small, approx. 120 CHF" : "Service small, approx. 120 CHF",
+    "Large service, approx. 170 CHF" : "Large service, approx. 170 CHF",
+    "Do not book a service package" : "Do not book a service package",
+    "Does your bike have an electric motor?" : "Does your bike have an electric motor?",
+    "Would you like to book individual services only?" : "Would you like to book individual services only?",
+    "Multiple selections are possible." : "Multiple selections are possible.", 
+    "Tube and/or tire change" : "Tube and/or tire change",
+    "Center Wheels" : "Center Wheels",
+    "Set circuit" : "Set circuit",
+    "Check and adjust brakes" : "Check and adjust brakes",
+    "Change brake pads" : "Change brake pads",
+    "Fork Service" : "Fork Service",
+    "Damper Service" : "Damper Service",
+    "Bike complete cleaning" : "Bike complete cleaning",
+    "Control light" : "Control light",
+    "E-Bike:" : "E-Bike:",
+    "Function check electronics/drive" : "Function check electronics/drive",
+    "Check and charge battery" : "Check and charge battery",
+    "Would you like to describe the problem with your bike in more detail?" : "Would you like to describe the problem with your bike in more detail?",
+    "e.g. the chain broke, I have a figure eight in the front wheel." : "e.g. the chain broke, I have a figure eight in the front wheel.",
+    "Do you have a cost ceiling?" : "Do you have a cost ceiling?",
+    "Tell us something about yourself:" : "Tell us something about yourself:",
+    "First name" : "First name",
+    "Last name" : "Last name",
+    "Street" : "Street",
+    "No" : "No",
+    "POSTCODE" : "POSTCODE",
+    "Location" : "Location",
+    "email" : "email",
+    "phone" : "phone"
 }
